# Scar

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  GenerateProjects.bat  README.md  Scar.sln  premake5.lua  vcpkg.json
PFE_Executabele_64/: imgui.ini
PFE_Source_Code/: CMakeLists.txt
PFE_Source_Code/designs/: Design0.scar  ayyoub.scar
PFE_Source_Code/src/: main.cpp  pfe.cpp
PFE_Source_Code/src/shaders/: BallFragmentShader.sh  FragmentShader.sh  SquareFragmentShader.sh  SquareVertexShader.sh  VertexShader.sh
Pong/: Pong.vcxproj  Pong.vcxproj.filters  imgui.ini
Pong/src/: Pong.cpp
Pong/src/Ball/: Ball.h
Pong/src/GameObjects/: GameObj.cpp  GameObj.h
Pong/src/shaders/: BallFragmentShader.sh  FragmentShader.sh  VertexShader.sh
Scar/: Scar.vcxproj  Scar.vcxproj.filters
Scar/src/core/: Engine.cpp
Scar/src/events/: KeyEvent.cpp  MouseEvent.cpp
Scar/src/graphics/: Mesh.cpp  RenderCommands.cpp  Texture.cpp
Scar/src/imguiWindow/: imguiWindow.cpp
Scar/src/managers/: LogManager.cpp  RenderManager.cpp
ScarEditor/: ScarEditor.vcxproj  imgui.ini
ScarEditor/src/: main.cpp
Scar_Source_Code/: CMakeLists.txt
Scar_Source_Code/include/Scar/core/: Engine.h  EntryPoint.h  Paths.h  core.h
Scar_Source_Code/include/Scar/events/: MouseEvent.h
Scar_Source_Code/include/Scar/graphics/: Entity.h  FrameBuffer.h  RenderCommands.h  Texture.h  Vertex.h
Scar_Source_Code/include/Scar/managers/: EntityManager.h  LogManager.h  RenderManager.h
Scar_Source_Code/include/Scar/window/: Window.h
Scar_Source_Code/src/core/: Engine.cpp
Scar_Source_Code/src/events/: KeyEvent.cpp  MouseEvent.cpp
Scar_Source_Code/src/graphics/: Entity.cpp  FrameBuffer.cpp  RenderCommands.cpp  Shader.cpp  Texture.cpp  Vertex.cpp
Scar_Source_Code/src/imguiWindow/: imguiWindow.cpp
Scar_Source_Code/src/managers/: EntityManager.cpp  LogManager.cpp  RenderManager.cpp
Scar_Source_Code/src/shaders/: FragmentShader.sh  ScreenFragmentShader.sh  ScreenVertexShader.sh  VertexShader.sh
Scar_Source_Code/src/window/: Window.cpp
cmake/: ScarDependencies.cmake
docs/: architecture.md  restructure-plan.md
(+38 files in other folders)
